Edited wiki page through web user interface.

--- a/wiki/Documentation.wiki
+++ b/wiki/Documentation.wiki
@@ -1,3 +1,4 @@
+#summary Overview of installation and usage
 #labels Phase-Support
 Copied from README.txt until I have something more useful to put here:
 
