- updated info on spaces in SSIDs - some formatting upgrades

--- a/wiki/Documentation.wiki
+++ b/wiki/Documentation.wiki
@@ -1,34 +1,35 @@
 #summary Overview of installation and usage
-#labels Phase-Support,Featured
-Copied from README.txt until I have something more useful to put here:
+#labels Featured,Phase-Support,Phase-Deploy
 
+(Copied from README.txt until I have something more useful to put here)
 
 == wifi_monitor basic documentation ==
 
-overview:
+
+*overview:*
     This program is used to execute an HTTP(S) POST when associating to a 
     particular SSID, ie logging you in through a web authentication system once
     you associate to the campus wifi network.
 
-installation:
+*installation:*
     Double-click on the install.command file, enter the requested information, 
     then provide your password so that the program can be installed in a 
     system directory.  The info required is as follows -
-        * SSID: the particular SSID which you want to take action on when associating to it
-        * login URL: the URL you want the program to send data to when associating to the selected SSID
-        * POST data: the POST data you want to send to the login URL when associating to the selected SSID
+        * *SSID*: the particular SSID which you want to take action on when associating to it
+        * *login URL*: the URL you want the program to send data to when associating to the selected SSID
+        * *POST data*: the POST data you want to send to the login URL when associating to the selected SSID
 
-uninstallation:
+*uninstallation:*
     Double-click on the uninstall.command file and enter your password.
 
-usage:
+*usage:*
     The program will launch at each login and run in the background.
 
-configuration:
+*configuration:*
     If you want to change the preferences after installing, run the program
     manually from Terminal like so (the -v option will give extra feedback),
     using only the preference flags you wish to change -
-        wifi_monitor -v -storePrefs {prefs}
+        {{{wifi_monitor -v -storePrefs {prefs...} }}}
         
         {prefs}=
             * -ssid=SOME_SSID
@@ -37,4 +38,6 @@ configuration:
             * -interface=enX
             * -ip_version=X
     Example for changing the SSID to "super_hax":
-        wifi_monitor -storePrefs -ssid=super_hax
+        {{{wifi_monitor -storePrefs -ssid=super_hax}}}
+    If you need to use an SSID with a space in the name, configure like so:
+        {{{defaults write com.wifi_monitor SSID "some ssid"}}}
